--- a/src/android/FCMPlugin.gradle
+++ b/src/android/FCMPlugin.gradle
@@ -9,7 +9,7 @@ buildscript {
         //classpath 'com.google.gms:google-services:3.1.+'
         
         classpath 'com.android.tools.build:gradle:+'
-        classpath 'com.google.gms:google-services:4.3.1'
+        classpath 'com.google.gms:google-services:+'
     }
 }
 repositories {
