--- a/src/android/FCMPlugin.gradle
+++ b/src/android/FCMPlugin.gradle
@@ -1,30 +1,45 @@
 buildscript {
     repositories {
-        mavenCentral()
-        jcenter()
+        //mavenCentral()
+        //jcenter()
+        //mavenLocal()
+        
         mavenLocal()
+        google()
+        maven {
+            url "https://maven.google.com"
+        }
+        jcenter()
     }
     dependencies {
         //classpath 'com.android.tools.build:gradle:2.3.+'
         //classpath 'com.google.gms:google-services:3.1.+'
         
-        classpath 'com.android.tools.build:gradle:+'
-        classpath 'com.google.gms:google-services:+'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.google.gms:google-services:4.3.2'  
     }
 }
 repositories {
     mavenCentral()
     jcenter()
+    google()  
 }
 dependencies {
-    //implementation 'com.google.firebase:firebase-core:11.+'
-    
-    
-  implementation 'com.google.firebase:firebase-database:19.0.0'
+   // Add the Firebase SDK for Google Analytics
+  implementation 'com.google.firebase:firebase-analytics:17.2.0'
+
+  // Add the SDKs for any other Firebase products you want to use in your app
+  // For example, to use Firebase Authentication and Cloud Firestore
+  implementation 'com.google.firebase:firebase-auth:19.1.0'
+  implementation 'com.google.firebase:firebase-firestore:21.1.1'
 }
 // apply plugin: 'com.google.gms.google-services'
 // class must be used instead of id(string) to be able to apply plugin from non-root gradle file
-// apply plugin: com.google.gms.googleservices.GoogleServicesPlugin <<Original
-ext.postBuildExtras = {
-    apply plugin: com.google.gms.googleservices.GoogleServicesPlugin
-}
+
+// apply plugin: com.google.gms.googleservices.GoogleServicesPlugin
+//ext.postBuildExtras = {
+ //   apply plugin: com.google.gms.googleservices.GoogleServicesPlugin
+//}
+
+apply plugin: 'com.google.gms.google-services'
+
