--- a/src/android/FCMPlugin.gradle
+++ b/src/android/FCMPlugin.gradle
@@ -1,15 +1,11 @@
 buildscript {
     repositories {
-        //mavenCentral()
-        //jcenter()
-        //mavenLocal()
         
-        mavenLocal()
         google()
-        maven {
-            url "https://maven.google.com"
-        }
-        jcenter()
+        //maven {
+        //    url "https://maven.google.com"
+       // }
+       // jcenter()
     }
     dependencies {
         //classpath 'com.android.tools.build:gradle:2.3.+'
@@ -20,13 +16,13 @@ buildscript {
     }
 }
 repositories {
-    mavenCentral()
-    jcenter()
+    //mavenCentral()
+    //jcenter()
     google()  
 }
 dependencies {
    // Add the Firebase SDK for Google Analytics
-  implementation 'com.google.firebase:firebase-analytics:17.2.0'
+  //implementation 'com.google.firebase:firebase-analytics:17.2.0'
 
   // Add the SDKs for any other Firebase products you want to use in your app
   // For example, to use Firebase Authentication and Cloud Firestore
