--- a/src/android/FCMPlugin.gradle
+++ b/src/android/FCMPlugin.gradle
@@ -29,7 +29,7 @@ dependencies {
   //implementation 'com.google.firebase:firebase-auth:19.1.0'
   //implementation 'com.google.firebase:firebase-firestore:21.1.1'
   
-  implementation com.google.firebase:firebase-messaging:17.5.0
+  implementation 'com.google.firebase:firebase-messaging:17.5.0'
   
   
   
