--- a/src/android/FCMPlugin.gradle
+++ b/src/android/FCMPlugin.gradle
@@ -24,7 +24,7 @@ dependencies {
   // Add the SDKs for any other Firebase products you want to use in your app
   // For example, to use Firebase Authentication and Cloud Firestore
   
-  implementation 'com.google.firebase:firebase-auth:19.1.0'
+  //implementation 'com.google.firebase:firebase-auth:19.1.0'
   //implementation 'com.google.firebase:firebase-firestore:21.1.1'
   
   implementation 'com.google.firebase:firebase-messaging:17.5.0'
